--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "passport-local": "~0.1.6",
     "passport-local-mongoose": "~0.2.5",
     "should": "~2.1.0",
-    "bower": "1.8.8"
+    "bower": "1.8.8",
+    "airbnbapijs": "0.10.0"
   },
   "scripts": {
       "postinstall": "bower install",
